# ftc265

./: .gitignore  README.md  build.gradle  fixes.md  settings.gradle  spotless.gradle
lib/: CMakeLists.txt  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  WPIMathJNI.cpp  edu_wpi_first_math_WPIMathJNI.h  t265wrapper.cpp  t265wrapper.hpp
lib/src/main/cpp/Eigen/: Cholesky  Core  Eigenvalues  LU  QR  SVD  StdDeque  StdList
lib/src/main/cpp/Eigen/src/Cholesky/: LDLT.h  LLT.h
lib/src/main/cpp/Eigen/src/Core/: ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  Block.h  BooleanRedux.h  ConditionEstimator.h  CoreEvaluators.h  CwiseBinaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  ForceAlignedAccess.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  Map.h  MapBase.h  MathFunctions.h  MathFunctionsImpl.h  NestByValue.h  NoAlias.h  Product.h  ProductEvaluators.h  Redux.h  Ref.h  Replicate.h  ReturnByValue.h  Reverse.h  SelfCwiseBinaryOp.h  SolveTriangular.h  StableNorm.h  (+4 more)
lib/src/main/cpp/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  MatrixBaseEigenvalues.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h
lib/src/main/cpp/Eigen/src/Jacobi/: Jacobi.h
lib/src/main/cpp/Eigen/src/LU/: FullPivLU.h  InverseImpl.h  PartialPivLU.h
lib/src/main/cpp/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h  HouseholderQR.h
lib/src/main/cpp/Eigen/src/SVD/: SVDBase.h
lib/src/main/cpp/Eigen/src/StlSupport/: StdDeque.h  StdList.h  StdVector.h  details.h
lib/src/main/cpp/Eigen/src/misc/: RealSvd2x2.h
lib/src/main/cpp/Eigen/src/plugins/: CommonCwiseBinaryOps.h  CommonCwiseUnaryOps.h  MatrixCwiseBinaryOps.h
lib/src/main/cpp/jni/: README.md  jni.h  jni_md.h
lib/src/main/cpp/native/cpp/jni/: WPIUtilJNI.cpp
lib/src/main/cpp/native/include/wpi/: Algorithm.h
lib/src/main/java/com/roboknights4348/lib/: LICENSE.md
lib/src/main/java/com/spartronics4915/lib/: PoseMath.java  T265AutoInit.java  T265Camera.java  T265Config.java  T265Helper.java  T265Hooks.java  T265Localizer.java  (+2 more)
lib/src/main/jniLibs/: README.md
(+155 files in other folders)
